--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
     </div>  
     <div class="container-fluid">
       <div class="row">
-        <div class="col-6" style="padding-right: 1px; padding-left: 0px;">
+        <div class="col-md-6 col-12" style="padding-right: 1px; padding-left: 0px;">
           <img src="img/honolulu.jpg" alt="" class="img-fluid">
         </div>
-        <div class="col-6" style="background-color: rgb(45, 49, 58);">
+        <div class="col-md-6" style="background-color: rgb(45, 49, 58);">
           <h3 class="text-white mt-3">Bs As - Octubre</h3>
           <p class="text-white">Buenos Aires es la provincia y localidad más grande del estado de Argentina, en los Estados Unidos. Honolulu es la más sureña de entre las principales ciudades estadounideneses. Aunque el nombre de Honolulu se refiere al área urbana en la costa sureste de la isla de Oahu, la ciudad y el condado de Honolulu han formado una ciudad-condado consolidada que cubre toda la ciudad (aproximadamente 600 km de superficie).</p>
           <button type="button" class="btn btn-outline-light btn-sm">Conocé más</button>
