--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
           </a>
         </div>
         <div class="row">
-          <div class="collapse navbar-collapse" id="navbarNav" >
+          <div class="collapse navbar-collapse" id="navbarToggleExternalContent" >
             <ul class="navbar-nav">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">La conferencia</a>
               </li>
               <li class="nav-item ">
-                <a class="nav-link" aria-current="page" href="#">Los oradores</a>
+                <a class="nav-link" aria-current="page" href="#Oradores">Los oradores</a>
               </li>
               <li class="nav-item ">
-                <a class="nav-link" href="#">El lugar y la fecha</a>
+                <a class="nav-link" href="#Lugar">El lugar y la fecha</a>
               </li>
               <li class="nav-item ">
-                <a class="nav-link" href="#">Conviértete en orador</a>
+                <a class="nav-link" href="#Convierte">Conviértete en orador</a>
               </li>
               <li class="nav-item ">
                 <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true" style="color: green;">Comprar tickets</a>
@@ -39,6 +39,13 @@
             </ul>
           </div>
         </div>
+        <nav class="navbar navbar-dark">
+          <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+          </div>
+        </nav>
             
       </nav>
     </div>
@@ -48,7 +55,7 @@
       <div class="row">
         <div class="col-4"></div>
         <div class="col-7 text-end  textoPortada">
-          <h3 class="align-bottom fw-bold">Conf Bs As</h3>
+          <h3 class="align-bottom fw-bold" id="Conferencia">Conf Bs As</h3>
           <span  class="align-bottom">
             Bs As llega por primera vez a Argentina. Un evento para compartir con <br>nuestra comunidad el conocimiento y experiencia de los expertos que <br>estan creando el futuro de internet. Ven a conocer a miembros del<br> evento, a otros estudiante de Codo a Codo y los oradores de primer<br>nivel que tenemos para ti. Te esperamos!</span>
             <br><button type="button" class="btn btn-outline-light btn-sm mt-3">Quiero ser orador</button>
@@ -58,7 +65,7 @@
       </div>
     </div>
     <div class="container text-center">
-      <h7>CONOCE A LOS</h7>
+      <h7 id="Oradores">CONOCE A LOS</h7>
       <h3 class="fw-bold">ORADORES</h3>
     </div>
     <div class="container cards">
@@ -67,10 +74,10 @@
           <div class="card">
             <img src="img/steve.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <div class="badge bg-warning text-wrap" style="width: 4.6rem; color: black;">
+              <div class="badge bg-warning text-wrap" style="width: 6.2em; color: black;">
                 Javascript
               </div>
-              <div class="badge text-wrap" style="width: 3rem; color: #fff; background-color: rgb(0, 173, 173);">
+              <div class="badge text-wrap" style="width: 4em; color: #fff; background-color: rgb(0, 173, 173);">
                 React
               </div>
               <h5 class="card-title fw-bold">Steve Jobs</h5>
@@ -82,10 +89,10 @@
           <div class="card">
             <img src="img/bill.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <div class="badge bg-warning text-wrap" style="width: 4.6rem; color: black;">
+              <div class="badge bg-warning text-wrap" style="width: 6.2em; color: black;">
                 Javascript
               </div>
-              <div class="badge text-wrap" style="width: 3rem; color: #fff; background-color: rgb(0, 173, 173);">
+              <div class="badge text-wrap" style="width: 4em; color: #fff; background-color: rgb(0, 173, 173);">
                 React
               </div>
               <h5 class="card-title fw-bold">Bill Gates</h5>
@@ -97,10 +104,10 @@
           <div class="card">
             <img src="img/ada.jpeg" class="card-img-top" alt="...">
             <div class="card-body">
-              <div class="badge bg-secondary text-wrap" style="width: 4.6rem; color: #fff;">
+              <div class="badge bg-secondary text-wrap" style="width: 6em; color: #fff;">
                 Negocios
               </div>
-              <div class="badge bg-danger text-wrap" style="width: 4rem; color: #fff; background-color: rgb(0, 173, 173);">
+              <div class="badge bg-danger text-wrap" style="width: 5.5em; color: #fff; background-color: rgb(0, 173, 173);">
                 Startups
               </div>
               <h5 class="card-title fw-bold">Ada Lovelace</h5>
@@ -116,14 +123,14 @@
           <img src="img/honolulu.jpg" alt="" class="img-fluid">
         </div>
         <div class="col-md-6" style="background-color: rgb(45, 49, 58);">
-          <h3 class="text-white mt-3">Bs As - Octubre</h3>
+          <h3 class="text-white mt-3" id="Lugar">Bs As - Octubre</h3>
           <p class="text-white">Buenos Aires es la provincia y localidad más grande del estado de Argentina, en los Estados Unidos. Honolulu es la más sureña de entre las principales ciudades estadounideneses. Aunque el nombre de Honolulu se refiere al área urbana en la costa sureste de la isla de Oahu, la ciudad y el condado de Honolulu han formado una ciudad-condado consolidada que cubre toda la ciudad (aproximadamente 600 km de superficie).</p>
           <button type="button" class="btn btn-outline-light btn-sm">Conocé más</button>
         </div>
       </div>
     </div>
     <div class="container text-center">
-      <h7>CONVIERTETE EN UN</h7>
+      <h7 id="Convierte">CONVIERTETE EN UN</h7>
       <h3 class="fw-bold">ORADOR</h3>
       <P>Anotate como orador para dar una <a href="#" style="color: black;">charla ignite</a>. Cuéntanos de que quieres hablar!</P>
     </div>
@@ -146,7 +153,7 @@
       </div>
     </div>
     <footer style="margin-top: 1em; background-color: rgba(10, 59, 122, 0.836);">
-      <nav class="navbar navbar-expand-lg">
+      <nav class="navbar navbar-expand">
         <div class="container">
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav navbar-center">
@@ -154,7 +161,7 @@
               <a class="nav-link f-link text-white" href="#">Contáctanos</a>
               <a class="nav-link f-link text-white" href="#">Prensa</a>
               <a class="nav-link f-link text-white" href="#">Conferencias</a>
-              <a class="nav-link f-link texto-centrado text-white" href="#">Términos y condiciones</a>
+              <a class="nav-link f-link texto-centrado text-white" href="#">Términos y <br> condiciones</a>
               <a class="nav-link f-link text-white" href="#">Privacidad</a>
               <a class="nav-link f-link text-white" href="#">Estudiantes</a>
             </div>
