Integracion funcionalidad tickets

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <a class="nav-link" href="#Convierte">Conviértete en orador</a>
               </li>
               <li class="nav-item ">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true" style="color: green;">Comprar tickets</a>
+                <a class="nav-link" href="comprarTickets.html"  style="color: green;">Comprar tickets</a>
               </li>
             </ul>
           </div>
