Prevencion del submit para que se muestre el total

--- a/comprarTickets.html
+++ b/comprarTickets.html
@@ -101,7 +101,7 @@
         <input class="form-control p-3" type="text" value="  Total a Pagar: $" id="cartelTotal" readonly style="background-color: rgb(151, 204, 251);">
       </div>
       <div class="col-6"><button class="btn w-100 text-light" type="reset" style="background-color: rgba(97, 189, 35, 0.795);">Borrar</button></div>
-      <div class="col-6"><button class="btn w-100 text-light" type="submit" style="background-color: rgba(97, 189, 35, 0.795);" onclick="calcularTotal()" id="botonResumen">Resumen</button></div>
+      <div class="col-6"><button class="btn w-100 text-light" type="submit" style="background-color: rgba(97, 189, 35, 0.795);" id="botonResumen">Resumen</button></div>
       
     </form>
   </div>
